--- a/nbt.config
+++ b/nbt.config
@@ -1,6 +1,6 @@
 env {
     PATH = "${baseDir}/RATT:${baseDir}/ABACAS2:${baseDir}/ORTHOMCLV1.4:${baseDir}/genometools/bin:${baseDir}/aragorn:${baseDir}/augustus/bin:${baseDir}/augustus/scripts/:$PATH"
-    PERL5LIB = "/Users/efloden/projects/companion_reproduce/ORTHOMCLV1.4/:${baseDir}/RATT/:${baseDir}/ABACAS2/:${PERL5LIB}"
+    PERL5LIB = "${baseDir}/RATT/:${baseDir}/ABACAS2/:${PERL5LIB}"
     RATT_HOME = "${baseDir}/RATT"
     RATT_CONFIG = "${baseDir}/RATT/RATT.config_euk_NoPseudo_SpliceSite"
     GT_RETAINIDS = "yes"
@@ -8,7 +8,6 @@ env {
     AUGUSTUS_CONFIG_PATH = "${baseDir}/data/augustus"
     FILTER_SHORT_PARTIALS_RULE = "${baseDir}/data/filters/filter_short_partials.lua"
     PFAM2GO = "${baseDir}/data/pfam2go/pfam2go.txt"
-    ORTHOMCL_HOME = "/Users/efloden/projects/companion_reproduce/ORTHOMCLV1.4"
 }
 
 params.GO_OBO = "/opt/go.obo"
