Adding missing default params

--- a/params_default.config
+++ b/params_default.config
@@ -71,4 +71,7 @@ params {
     // output GAF metadata
     TAXON_ID = 4711
     DB_ID = "Companion"
+    
+    TRANSCRIPT_FILE = false
+    print_paths = false
 }
